# mycro-services-boilerplate

./: .gitignore  CLOUDFLARE_DEPLOYMENT.md  DEPLOYMENT_CHEATSHEET.md  FIXES_SUMMARY.md  README.md  TROUBLESHOOTING.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: database.py  main.py
backend/app/db/: player.py
backend/app/router/: api.py  player.py
backend/app/schemas/: player.py
frontend/: .dockerignore  DOCKER.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: config-global.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/_data/: slider-data.ts  users.ts
frontend/src/app/client/: api.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/todolist/: page.tsx
frontend/src/components/: accordions.tsx  animation-shiny-text.tsx  button.tsx  container.tsx  theme-switcher.tsx  todolist.tsx  zero.tsx
frontend/src/components/context/: theme-provider.tsx
frontend/src/components/landing-page/: avatar-circles.tsx  footer.tsx  hero-links.tsx  hero.tsx  pictures-scroll.tsx  slide-buttons.tsx  slides-presentation.tsx  testimonials.tsx
frontend/src/components/molecules/: card.tsx
frontend/src/components/navbar/: navbar.tsx
frontend/src/components/ui/: shiny-button.tsx
frontend/src/config/: themes.ts
frontend/src/hooks/: players.tsx
supabase/: .gitignore  README.md  docker-compose.yml
(+491 files in other folders)
